--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
+<label>{{this.userDetails.username}}</label>
+<button class="btn btn-default" (click)="doLogout()">Log out</button>
 <router-outlet></router-outlet>
