--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,7 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-left: 90%;
+    
 }
 
 label {
@@ -18,5 +18,22 @@ label {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-left: 90%;
+    
+}
+
+ul {
+    position: relative;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    padding: .5rem 1rem;
+    margin-bottom: .5rem;
+    justify-content: space-between;
+    width: 120px;
+    background-color: #ffffff; 
+    text-align: center;
+    color: #111111; /*цвет шрифта в обычном состоянии*/
+    font-size: 14px; /* Размер шрифта*/
+    font-family: Tahoma; /* Стиль шрифта*/
+    margin-left: 85%;
+    display: inline-block;
 }
