--- a/src/app/modules/search/components/search/search.component.css
+++ b/src/app/modules/search/components/search/search.component.css
@@ -22,7 +22,7 @@ input[type="text"] {
     font-family: Tahoma; /* Стиль шрифта*/
  }
 
- button {
+ button.btn-default {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
@@ -31,4 +31,15 @@ input[type="text"] {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+  }
+
+  button.btn {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 3px 3px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
   }
