--- a/src/app/modules/search/components/search/search.component.html
+++ b/src/app/modules/search/components/search/search.component.html
@@ -1,5 +1,5 @@
-<br>
 <div class="form-group">
+    &nbsp; &nbsp; &nbsp; &nbsp;
     <input type="text" id="option" placeholder="   запрос"
     class="form-control" autocomplete="on" #option [(ngModel)]="query">
     <button #btn class="btn-default" (click)="Search1()">Поиск</button>
