--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,37 +2,44 @@ button {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 10px 25px;
+    padding: 7px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    
+    font-size: 10px;
 }
 
 label {
     border: none;
     color: black;
-    padding: 10px 25px;
+    padding: 10px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 14px;
     
+}   
+
+
+a.up {
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
 }
+
 
 ul {
     position: relative;
     border: 1px solid #cccccc;
     border-radius: 5px;
-    padding: .5rem 1rem;
+    padding: .2rem 0rem;
     margin-bottom: .5rem;
     justify-content: space-between;
-    width: 120px;
+    width: 150px;
     background-color: #ffffff; 
     text-align: center;
     color: #111111; /*цвет шрифта в обычном состоянии*/
-    font-size: 14px; /* Размер шрифта*/
+    font-size: 10px; /* Размер шрифта*/
     font-family: Tahoma; /* Стиль шрифта*/
     margin-left: 85%;
     display: inline-block;
