--- a/src/app/modules/search/components/showChapter/showChapter.component.html
+++ b/src/app/modules/search/components/showChapter/showChapter.component.html
@@ -1,4 +1,9 @@
+
 <div>
     <br><br><br>
  {{this.text}}
 </div>
+
+
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" 
+[template]="customLoadingTemplate"></ngx-loading>
